fix table header alignment

--- a/src/main/java/com/mayhew3/drafttower/client/UnclaimedPlayerTable.css
+++ b/src/main/java/com/mayhew3/drafttower/client/UnclaimedPlayerTable.css
@@ -13,3 +13,7 @@ tr:hover .newsCell {
   visibility: visible;
   color: black;
 }
+
+.rightAlign {
+  text-align: right !important;
+}
